[gd_scene load_steps=7 format=2]

[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Scenes/InteractiveObjects/Collectables/States/CollectableSpawnState.gd" type="Script" id=2]
[ext_resource path="res://Scenes/InteractiveObjects/Collectables/States/CollectableFollowState.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/State.gd" type="Script" id=4]
[ext_resource path="res://Scenes/InteractiveObjects/Coin/Validation.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Behaviours/CollectableBehaviour.gd" type="Script" id=6]

[node name="CollectableBehaviour" type="Node2D"]
script = ExtResource( 6 )

[node name="FollowArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
scale = Vector2( 7.2, 7.2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]

[node name="CollectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="SpawnDurationTimer" type="Timer" parent="StateMachine/Spawn"]
wait_time = 0.2
one_shot = true
autostart = true

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Collect" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
